# VideoAndAudio

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VideoPlayer.cpp  VideoPlayer.h  decode.cpp  decode.h  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libavdevice/: avdevice.h  version.h
app/src/main/cpp/include/libavfilter/: avfilter.h  buffersrc.h  version.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h  version.h
app/src/main/cpp/include/libswresample/: version.h
app/src/main/cpp/include/libswscale/: swscale.h  version.h
app/src/main/java/com/linhao/: FfmpegDecodeVideoActivity.java  FfmpegPlayVideoActivity.java  MainActivity.java  RecordVideoActivity.java  VideoActivity.java
app/src/main/java/com/linhao/record/: AudioTrackAdapter.java  PcmToWav.java  RecordAdapter.java  RecordStreamListener.java  WaveHeader.java
app/src/main/java/com/linhao/recordVideo/: AudioEncoderAdapter.java  MediaMuxerAdapter.java  RecordVideoAdapter.java
app/src/main/java/com/linhao/utils/: FileUtils.java  Status.java  StatusUtil.java
app/src/main/java/com/linhao/video/: IPlayerCallBack.java  VideoAdapter.java
app/src/main/res/layout/: activity_ffmpeg_decode_video.xml  activity_ffmpeg_play_video.xml  activity_main.xml  activity_media_muxer.xml  activity_record_video.xml  activity_video.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
